force-app/main/default/objects/Payment_Option__c/fields/Balance1__c.field-meta.xml
<CustomField>
    <fullName>Balance1__c</fullName>
    <formula>&quot;your account balance is = &quot;&amp;  TEXT(100000- amount__c)&amp;&quot;  Rupees&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance1</label>
    <type>Text</type>
</CustomField>