force-app/main/default/objects/Payment_Option__c/fields/Balance2__c.field-meta.xml
<CustomField>
    <fullName>Balance2__c</fullName>
    <formula>&quot;your account balance is = &quot; &amp;  TEXT(100000)&amp; &quot;  Rupees&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance2</label>
    <type>Text</type>
</CustomField>