force-app/main/default/objects/Payment_Option__c/fields/balance__c.field-meta.xml
<CustomField>
    <fullName>balance__c</fullName>
    <formula>&quot;your account balance is = &quot;&amp;  TEXT(100000+amount__c) &amp; &quot;  Rupees&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>balance</label>
    <type>Text</type>
</CustomField>