force-app/main/default/objects/Payment_Option__c/fields/Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_name__c</fullName>
    <label>Bank name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>state bank of india</fullName>
            </value>
            <value>
                <fullName>bank of india</fullName>
            </value>
            <value>
                <fullName>bank of baroda</fullName>
            </value>
            <value>
                <fullName>canara bank</fullName>
            </value>
            <value>
                <fullName>hdfc bank</fullName>
            </value>
            <value>
                <fullName>icici bank</fullName>
            </value>
            <value>
                <fullName>kotak mahindra bank</fullName>
            </value>
            <value>
                <fullName>axis bank</fullName>
            </value>
            <value>
                <fullName>union bank</fullName>
            </value>
            <value>
                <fullName>punjab national bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>