force-app/main/default/objects/Payment_Option__c/fields/mode_of_payment__c.field-meta.xml
<CustomField>
    <fullName>mode_of_payment__c</fullName>
    <label>mode of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>PHONE PE</fullName>
            </value>
            <value>
                <fullName>G PAY</fullName>
            </value>
            <value>
                <fullName>CARD</fullName>
            </value>
            <value>
                <fullName>PAYTM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>