force-app/main/default/objects/Payment_Option__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <label>OTP</label>
    <length>6</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>