force-app/main/default/objects/Payment_Option__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <label>PIN</label>
    <length>6</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>