force-app/main/default/objects/Payment_Option__c/recordTypes/Balance_Enquiry_form.recordType-meta.xml
<RecordType>
    <fullName>Balance_Enquiry_form</fullName>
    <active>true</active>
    <label>Balance Enquiry form</label>
</RecordType>