force-app/main/default/objects/Payment_Option__c/recordTypes/Credit_form.recordType-meta.xml
<RecordType>
    <fullName>Credit_form</fullName>
    <active>true</active>
    <label>Credit form</label>
</RecordType>