force-app/main/default/objects/Payment_Option__c/recordTypes/Debit_form.recordType-meta.xml
<RecordType>
    <fullName>Debit_form</fullName>
    <active>true</active>
    <label>Debit form</label>
</RecordType>